
* ``StringArgument`` now rejects '--' - it should be handled by the use of a
  ``DoubledashArgument`` where one is expected. This is a bit awkward and does
  not permit passing '--' down to a child process, so further work may be
  needed - file a bug if this affects you. (Robert Collins)

* ``test failing --subunit`` now exits 0 if there are no failing tests.
  (Robert Collins)

* ``testr load`` now supports passing filenames to subunit streams to load.
  (Robert Collins, #620386)

* ``testr run`` will now fail a test run if the test process exits non-zero.
  As a side effect of this change, if the test program closes its stdout but
  does not exit, ``testr run`` will hang (waiting for the test program to
  exit). (Robert Collins)

* ``testr run --load-list FILENAME`` will limit the tests run to the test ids
  supplied in the list file FILENAME. This is useful for manually specifying
  the tests to run, or running testr subordinate to testr (e.g. on remote 
  machines). (Robert Collins, partial fix for #597060)

* ``testr run foo`` now applies foo as a regex filter against the tests
  found by doing a listing of the test runners tests. Likewise
  ``testr list-tests foo`` will apply foo as a filter against the found tests.
  This makes it easy to limit the tests that will be requested for running by
  the backend test process - simply pass one or more regex filters into testr
  run. (Robert Collins, #597060)

* Test tags are now shown in failures. Of particular interest for folk debgging
  cross-test interactions will be the worker-N tags which indicate which
  backend test process executed a given test. (Robert Collins)

0.0.7
+++++

CHANGES
-------

* testrepository is now distributed via distribute rather than distutils,
  allowing installation via pip into virtualenv environments. (Robert Collins)

IMPROVEMENTS
------------

* stream loading will now synthesise datestamps before demultiplexing rather